// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`command surface (characterization) > enablement and disabled reasons: csv 1`] = `
{
  "app.settings": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.reopen": "enabled",
  "file.save": "enabled",
  "file.saveOptions": "enabled",
  "file.toggleProtect": "enabled",
  "format.backgroundColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.bold": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.borders": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.clear": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.conditionalFormatting": "enabled",
  "format.italic": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.numberFormat": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetCurrency": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetNumber": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetPercent": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.textColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.underline": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "enabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "enabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: csvReadOnly 1`] = `
{
  "app.settings": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.reopen": "enabled",
  "file.save": "enabled",
  "file.saveOptions": "enabled",
  "file.toggleProtect": "enabled",
  "format.backgroundColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.bold": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.borders": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.clear": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.conditionalFormatting": "enabled",
  "format.italic": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.numberFormat": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetCurrency": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetNumber": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetPercent": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.textColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.underline": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "enabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "enabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: none 1`] = `
{
  "app.settings": "enabled",
  "data.comment": "disabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "disabled",
  "data.validation": "disabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "disabled",
  "edit.copyAsMarkdown": "disabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "disabled",
  "edit.fillDown": "disabled",
  "edit.flashFill": "disabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "disabled",
  "edit.insertTime": "disabled",
  "edit.moveRange": "disabled",
  "edit.paste": "disabled",
  "edit.pasteFormats": "disabled",
  "edit.pasteValues": "disabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "disabled",
  "edit.undo": "disabled",
  "file.closeTab": "disabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.reopen": "disabled",
  "file.save": "disabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "disabled",
  "format.backgroundColor": "disabled",
  "format.bold": "disabled",
  "format.borders": "disabled",
  "format.clear": "disabled",
  "format.conditionalFormatting": "disabled",
  "format.italic": "disabled",
  "format.numberFormat": "disabled",
  "format.presetCurrency": "disabled",
  "format.presetNumber": "disabled",
  "format.presetPercent": "disabled",
  "format.textColor": "disabled",
  "format.underline": "disabled",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "search.find": "disabled",
  "search.findNext": "disabled",
  "search.findPrev": "disabled",
  "search.goToCell": "disabled",
  "search.replace": "disabled",
  "sheet.addColumn": "disabled",
  "sheet.addRow": "disabled",
  "sheet.autoFitCols": "disabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "disabled",
  "sheet.deleteRows": "disabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "disabled",
  "sheet.exportXlsx": "disabled",
  "sheet.filter": "disabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "disabled",
  "sheet.insertColLeft": "disabled",
  "sheet.insertColRight": "disabled",
  "sheet.insertRowAbove": "disabled",
  "sheet.insertRowBelow": "disabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "disabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "disabled",
  "view.zoom.110": "disabled",
  "view.zoom.125": "disabled",
  "view.zoom.150": "disabled",
  "view.zoom.200": "disabled",
  "view.zoom.50": "disabled",
  "view.zoom.75": "disabled",
  "view.zoom.90": "disabled",
  "view.zoom.in": "disabled",
  "view.zoom.out": "disabled",
  "view.zoom.reset": "disabled",
  "worksheet.add": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsf 1`] = `
{
  "app.settings": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "enabled",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.backgroundColor": "enabled",
  "format.bold": "enabled",
  "format.borders": "enabled",
  "format.clear": "enabled",
  "format.conditionalFormatting": "enabled",
  "format.italic": "enabled",
  "format.numberFormat": "enabled",
  "format.presetCurrency": "enabled",
  "format.presetNumber": "enabled",
  "format.presetPercent": "enabled",
  "format.textColor": "enabled",
  "format.underline": "enabled",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsfMarkdown 1`] = `
{
  "app.settings": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "enabled",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "enabled",
  "file.closeTab": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.backgroundColor": "enabled",
  "format.bold": "enabled",
  "format.borders": "enabled",
  "format.clear": "enabled",
  "format.conditionalFormatting": "enabled",
  "format.italic": "enabled",
  "format.numberFormat": "enabled",
  "format.presetCurrency": "enabled",
  "format.presetNumber": "enabled",
  "format.presetPercent": "enabled",
  "format.textColor": "enabled",
  "format.underline": "enabled",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "disabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "enabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "enabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "enabled",
  "worksheet.moveRight": "disabled",
  "worksheet.next": "enabled",
  "worksheet.prev": "enabled",
  "worksheet.rename": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;
